--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "Selvania-Launcher",
-    "preductname": "Selvania Launcher",
-    "version": "2.1.1",
+    "name": "Joako-Launcher",
+    "preductname": "Test Launcher",
+    "version": "2.2",
     "description": "Launcher Mincraft pour le serveur Selvania",
     "main": "src/app.js",
     "author": {
-        "name": "luuxis, Inc.",
-        "email": "contact@luuxis.fr",
-        "url": "https://github.com/luuxis"
+        "name": "byjoako",
+        "email": "contact@joako.dev",
+        "url": "https://github.com/byjoako"
     },
-    "url": "http://launcher.luuxis.fr",
+    "url": "http://launcher.luuxi",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
         "dev": "cross-env-shell DEV_TOOL=open nodemon --exec npm start",
@@ -39,6 +39,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/luuxis/Selvania-Launcher.git"
+        "url": "git+https://github.com/ByJoako/Joako-Launcher.git"
     }
 }
